Copied over most files from Project "InstagramClone" which I created following a youtube video

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+
+    //Design Library for Coordinator Layout and Toolbars
+    compile 'com.android.support:design:26.1.0'
+
+    //BottomNavigationViewEx Library
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
 }
