--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ExploreActivity"></activity>
+        <activity android:name=".ExploreActivity" />
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
