Added layout for ChatActvity. This includes a custom listView with Image and Text, and a "Chat" title at the top. *** Need to fix hidden text at the bottom under the navigation bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ExploreActivity" />
-        <activity android:name=".ChatActivity" />
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".Explore.ExploreActivity" />
+        <activity android:name=".Chat.ChatActivity" />
+        <activity android:name=".Profile.ProfileActivity"></activity>
     </application>
 
 </manifest>
