--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,8 @@ dependencies {
 
     //BottomNavigationViewEx Library
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
+
+    //Circle ImageView Library
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+
 }
