--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
+        <activity android:name=".HomeActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Explore.ExploreActivity" />
-        <activity android:name=".Chat.ChatActivity" />
-        <activity android:name=".Profile.ProfileActivity"></activity>
+        <activity android:name=".Explore.ExploreActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Chat.ChatActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Profile.ProfileActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
