--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,16 @@ dependencies {
     //Universal Image Loader Library
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
 
+    //firebase
+    compile 'com.google.firebase:firebase-core:11.8.0'
+
+    //firebase authentication
+    compile 'com.google.firebase:firebase-auth:11.8.0'
+
+    //firebase database
+    compile 'com.google.firebase:firebase-database:11.8.0'
+
 }
+
+//firebase
+apply plugin: 'com.google.gms.google-services'
