--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"
+        <activity android:name=".Explore.ExploreActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Explore.ExploreActivity"
-            android:screenOrientation="portrait"/>
         <activity android:name=".Chat.ChatActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".Profile.ProfileActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Login.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Login.RegisterActivity"
             android:screenOrientation="portrait" />
     </application>
 
