--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Profile.AccountSettingsActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".Share.ShareActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Share.NextActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
