Using activities for chat and private chat instead of fragments. Chats are loaded into a list. Can click on a chat and it brings you to private chat. Can use back button the end private chat activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Share.NextActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".Chat.PrivateChatActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
