Name, image, and last timestamp are displayed in the chat list. You can click on a chat to open up the private chat. You can click on the drawing space button to open the drawing space. Also modified animations to use fade and slide.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             android:screenOrientation="portrait" />
         <activity android:name=".Chat.PrivateChatActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".Chat.DrawActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
