Added the drawing app feature. Created a custom dialog for the brush settings menu. (currently using DialogFragment, might switch to a more practical dialog)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
 
     //firebase UI
     compile 'com.firebaseui:firebase-ui:3.2.2'
+
+    //bubble seekbar
+    compile 'com.xw.repo:bubbleseekbar:3.5-lite'
 }
 
 //firebase
