Made several improvements to the Upload page (compresses images differently based on their size). Added forgot password option on Login page. Images in the gallery and in the profile are displayed in reverse order. Added a new colour picker and brush opacity to the drawing space. Drawing space checks for permissions when a user tries to save a drawing to their Gallery. Any "age" inputs only accept integer values.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,12 @@ dependencies {
 
     //bubble seekbar
     compile 'com.xw.repo:bubbleseekbar:3.5-lite'
+
+    //colour picker
+    compile 'com.github.yukuku:ambilwarna:2.0.1'
+
+    //firebase cloud messaging service
+    compile 'com.google.firebase:firebase-messaging:11.8.0'
 }
 
 //firebase
